[gd_scene load_steps=6 format=3 uid="uid://cx0mijbgc4p32"]

[ext_resource type="Theme" uid="uid://crjtfys55hclx" path="res://scenes/theme.tres" id="1_3s7de"]
[ext_resource type="Script" path="res://code/list_quizzes.gd" id="1_6fp55"]
[ext_resource type="StyleBox" uid="uid://bamdphs3gbavb" path="res://theme/cancel_button_normal.tres" id="3_5i42l"]
[ext_resource type="StyleBox" uid="uid://s1t3t1q1vcaj" path="res://theme/cancel_button_hover.tres" id="4_ks2fr"]
[ext_resource type="StyleBox" uid="uid://dl66id58vo3f4" path="res://theme/cancel_button_pressed.tres" id="5_0w8t6"]

[node name="list_quizzes" type="Control" node_paths=PackedStringArray("quiz_list", "error_label", "create_quiz_button", "edit_button", "delete_button", "start_button")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_3s7de")
script = ExtResource("1_6fp55")
quiz_list = NodePath("VBoxContainer/CenterContainer/VBoxContainer/quiz_list")
error_label = NodePath("VBoxContainer/CenterContainer/VBoxContainer/error_label")
create_quiz_button = NodePath("VBoxContainer/VBoxContainer2/create_quiz_button")
edit_button = NodePath("VBoxContainer/VBoxContainer2/edit_button")
delete_button = NodePath("VBoxContainer/VBoxContainer2/delete_button")
start_button = NodePath("VBoxContainer/VBoxContainer2/start_button")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -67.5
offset_right = 100.0
offset_bottom = 67.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 50

[node name="CenterContainer" type="CenterContainer" parent="VBoxContainer"]
offset_right = 305.0
offset_bottom = 71.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/CenterContainer"]
custom_minimum_size = Vector2i(200, 0)
offset_left = 52.0
offset_right = 252.0
offset_bottom = 71.0

[node name="title" type="Label" parent="VBoxContainer/CenterContainer/VBoxContainer"]
offset_right = 200.0
offset_bottom = 29.0
text = "QUIZ LIST"
horizontal_alignment = 1

[node name="quiz_list" type="ItemList" parent="VBoxContainer/CenterContainer/VBoxContainer"]
offset_top = 33.0
offset_right = 200.0
offset_bottom = 41.0
auto_height = true
text_overrun_behavior = 0

[node name="error_label" type="Label" parent="VBoxContainer/CenterContainer/VBoxContainer"]
offset_top = 45.0
offset_right = 200.0
offset_bottom = 71.0
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer2" type="VBoxContainer" parent="VBoxContainer"]
offset_top = 121.0
offset_right = 305.0
offset_bottom = 327.0

[node name="start_button" type="Button" parent="VBoxContainer/VBoxContainer2"]
offset_right = 305.0
offset_bottom = 51.0
theme_override_colors/font_color = Color(0.164706, 1, 0.752941, 1)
text = "START QUIZ"

[node name="edit_button" type="Button" parent="VBoxContainer/VBoxContainer2"]
offset_top = 55.0
offset_right = 305.0
offset_bottom = 106.0
text = "EDIT QUIZ"

[node name="delete_button" type="Button" parent="VBoxContainer/VBoxContainer2"]
offset_top = 110.0
offset_right = 305.0
offset_bottom = 151.0
theme_override_colors/font_color = Color(1, 0.905882, 0.572549, 1)
theme_override_styles/normal = ExtResource("3_5i42l")
theme_override_styles/hover = ExtResource("4_ks2fr")
theme_override_styles/pressed = ExtResource("5_0w8t6")
text = "DELETE QUIZ"

[node name="create_quiz_button" type="Button" parent="VBoxContainer/VBoxContainer2"]
offset_top = 155.0
offset_right = 305.0
offset_bottom = 206.0
text = "CREATE NEW QUIZ"
